--- a/sign-up.html
+++ b/sign-up.html
@@ -22,7 +22,7 @@
         </a>
       </div>
       <div class="text-center">
-      <a href="index.html"><img width="140" class="mx-auto" src="/images/logo.svg" alt="Hello Agent Logo"></a>
+      <a href="/"><img width="140" class="mx-auto" src="/images/logo.svg" alt="Hello Agent Logo"></a>
       <h2 class="text-3xl text-primary font-bold mt-10 mb-2">Sign Up</h2>
       <p class="text-[16px] text-center">Join Us Today!</p>
     </div>
