--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
   <div
     class="flex min-h-screen flex-col justify-center items-center px-6 py-12 lg:px-8 bg-lightGray relative overflow-hidden">
     <div class="relative z-10 sm:mx-auto sm:w-full sm:max-w-lg bg-white py-20 px-10 rounded-3xl text-center">
-      <a href="index.html"><img width="140" class="mx-auto" src="/images/logo.svg" alt="Hello Agent Logo"></a>
+      <a href="/"><img width="140" class="mx-auto" src="/images/logo.svg" alt="Hello Agent Logo"></a>
       <h2 class="text-3xl text-primary font-bold mt-10 mb-2">Login</h2>
       <p class="">Welcome back! Please login to access your account.</p>
 
